--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "pint": [
+            "@php ./vendor/bin/pint"
         ]
     },
     "extra": {
