--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.5.1",
+        "bootstrap": "^5.3.2",
+        "laravel-vue-pagination": "^4.1.3",
+        "vue": "^3.2.36"
     }
 }
