--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@vitejs/plugin-vue": "^4.5.1",
         "bootstrap": "^5.3.2",
         "laravel-vue-pagination": "^4.1.3",
+        "typescript": "^5.3.2",
         "vue": "^3.2.36"
     }
 }
